Fix R Tests